# bspwm-workspaces

./: Cargo.toml
src/: main.rs
