[package]
name = "rustils"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3", features = ["derive"], optional = true }
winit = { version = "0.28", default_features = false, features = [
    "x11",
], optional = true }

[features]
workspaces = ["winit"]
args = ["clap"]

[[bin]]
name = "workspaces"
required-features = ["workspaces"]

[[bin]]
name = "wpg_post"

[[bin]]
name = "extract"
required-features = ["args"]

[[bin]]
name = "screenshot"

[[bin]]
name = "pulser"
required-features = ["args"]
