[package]
name = "rustils"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3", features = ["derive"], optional = true }
winit = { version = "0.29", default_features = false, features = [
  "x11",
], optional = true }
pipewire = { version = "0.7", optional = true }

[features]
workspaces = ["dep:winit"]
args = ["dep:clap"]
jap = []
pipewire = ["dep:pipewire"]

[[bin]]
name = "workspaces"
required-features = ["workspaces"]
default-features = ["jap"]

[[bin]]
name = "wpg_post"

[[bin]]
name = "extract"
required-features = ["args"]

[[bin]]
name = "screenshot"

[[bin]]
name = "pulser"
default-features = ["args", "pipewire"]
required-features = ["args", "pipewire"]
